--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "angular-sortablejs": "^2.5.2",
     "bootstrap": "^4.1.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.6",
+    "sortablejs": "^1.7.0",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
