--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angular-sortablejs": "^2.5.2",
     "bootstrap": "^4.1.0",
     "core-js": "^2.4.1",
+    "firebase": "^4.13.1",
     "rxjs": "^5.5.6",
     "sortablejs": "^1.7.0",
     "zone.js": "^0.8.19"
