--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.1.2",
     "angular-sortablejs": "^2.5.2",
+    "angularfire2": "^5.0.0-rc.6",
     "bootstrap": "^4.1.0",
     "core-js": "^2.4.1",
-    "firebase": "^4.13.1",
+    "firebase": "^4.12.1",
     "rxjs": "^5.5.6",
     "sortablejs": "^1.7.0",
     "zone.js": "^0.8.19"
