--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^4.1.0",
     "core-js": "^2.4.1",
     "firebase": "^4.12.1",
+    "raven-js": "^3.24.2",
     "rxjs": "^5.5.6",
     "sortablejs": "^1.7.0",
     "zone.js": "^0.8.19"
